# textpressoapi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example-query.txt  main.cpp
cmake-modules/: FindTextpresso.cmake
docs/: Makefile  add_documents.rst  categories.rst  conf.py  index.rst  make.bat  obtaining_a_token.rst  query_object.rst  search_documents.rst
docs/_themes/: sphinx_rtd_theme
